# fhir-rust-crate

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  llms.json  llms.txt  plan.md  tasks-roundtrip-failures.md  tasks.md
.claude/agents/: doc-editor.md
.github/workflows/: ci.yml
AGENTS/: architecture.md  code-generation.md  conventions.md  glossary.md  testing.md
book/: book.toml
book/src/: SUMMARY.md  bundles.md  code-generator.md  extensions.md  fhir-releases.md  getting-started.md  introduction.md  json-serialization.md  model-mapping.md  terminology-and-codes.md  tutorial.md  validation.md
examples/: build_patient.rs  client_crud.rs  code_systems.rs  extensions.rs  operation_outcome.rs  primitive_extensions.rs  r3_patient.rs  r4_and_r5_side_by_side.rs  r4_patient.rs  read_bundle.rs  transaction_bundle.rs  tutorial.rs  validate_resource.rs
fhir-derive/: Cargo.toml
fhir-derive-macros/: Cargo.toml
fhir-derive-macros/src/: lib.rs
help/releasing/: index.md
spec/: 01-overview.md  02-primitive-types.md  03-complex-datatypes.md  04-resources.md  05-code-systems.md  06-serialization.md  07-validation.md  08-code-generation.md  09-primitive-extensions.md  10-invariants-coverage.md  11-choice-types.md  12-fhir-releases.md  index.md  trademarks.md
src/: builder.rs  client.rs  coded.rs  codegen.rs  lib.rs  main.rs  meta.rs  prelude.rs  r3.rs  r4.rs  r5.rs  release.rs  summary.rs  temporal.rs  util.rs  validate.rs  xml.rs
src/codegen/: codes_gen.rs  extension_ext_gen.rs  meta_gen.rs  naming.rs  plan.rs  primitives.rs  render.rs  spec.rs  version.rs
src/r3/: builder.rs  bundle_util.rs  choice.rs  client.rs  coded.rs  codes.rs  extension_ext.rs  meta.rs  prelude.rs  resources.rs  summary.rs  temporal.rs  types.rs  validate.rs  xml.rs
src/r3/meta/: generated.rs
src/r3/resources/: account.rs  activity_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  audit_event.rs  basic.rs  binary.rs  body_site.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  charge_item.rs  claim.rs  claim_response.rs  clinical_impression.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  consent.rs  contract.rs  coverage.rs  data_element.rs  detected_issue.rs  device.rs  device_component.rs  device_metric.rs  device_request.rs  device_use_statement.rs  diagnostic_report.rs  document_manifest.rs  document_reference.rs  eligibility_request.rs  eligibility_response.rs  (+77 more)
src/r3/types/: address.rs  age.rs  annotation.rs  attachment.rs  backbone_element.rs  base_64_binary.rs  boolean.rs  code.rs  codeable_concept.rs  coding.rs  contact_detail.rs  contact_point.rs  contributor.rs  count.rs  data_requirement.rs  date.rs  date_time.rs  decimal.rs  distance.rs  dosage.rs  duration.rs  element.rs  element_definition.rs  extension.rs  human_name.rs  id.rs  identifier.rs  instant.rs  integer.rs  markdown.rs  meta.rs  money.rs  narrative.rs  oid.rs  parameter_definition.rs  period.rs  positive_int.rs  quantity.rs  range.rs  ratio.rs  (+14 more)
src/r4/: builder.rs  bundle_util.rs  choice.rs  client.rs  coded.rs  codes.rs  extension_ext.rs  meta.rs  prelude.rs  resources.rs  summary.rs  temporal.rs  types.rs  validate.rs  xml.rs
src/r4/meta/: generated.rs
src/r4/resources/: account.rs  activity_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  catalog_entry.rs  charge_item.rs  charge_item_definition.rs  claim.rs  claim_response.rs  clinical_impression.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  consent.rs  contract.rs  coverage.rs  coverage_eligibility_request.rs  coverage_eligibility_response.rs  detected_issue.rs  device.rs  device_definition.rs  device_metric.rs  device_request.rs  device_use_statement.rs  diagnostic_report.rs  (+106 more)
src/r4/types/: address.rs  age.rs  annotation.rs  attachment.rs  backbone_element.rs  base_64_binary.rs  boolean.rs  canonical.rs  code.rs  codeable_concept.rs  coding.rs  contact_detail.rs  contact_point.rs  contributor.rs  count.rs  data_requirement.rs  date.rs  date_time.rs  decimal.rs  distance.rs  dosage.rs  duration.rs  element.rs  element_definition.rs  expression.rs  extension.rs  human_name.rs  id.rs  identifier.rs  instant.rs  integer.rs  markdown.rs  marketing_status.rs  meta.rs  money.rs  money_quantity.rs  narrative.rs  oid.rs  parameter_definition.rs  period.rs  (+23 more)
src/r5/: builder.rs  bundle_util.rs  choice.rs  client.rs  coded.rs  codes.rs  extension_ext.rs  meta.rs  parse.rs  prelude.rs  resource.rs  resources.rs  summary.rs  temporal.rs  types.rs  validate.rs  xml.rs
src/r5/abstract_types/: canonical_resource.rs
src/r5/meta/: generated.rs
src/r5/parse/: all.rs  choice_gen.rs  coded_gen.rs  concept_maps.rs  data_elements.rs  meta.rs  option_vec_gen.rs  profiles_others.rs  profiles_resources.rs  profiles_types.rs  search_parameters.rs  siblings.rs  value_sets.rs  vec1_gen.rs
src/r5/resources/: account.rs  activity_definition.rs  actor_definition.rs  administrable_product_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  artifact_assessment.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  biologically_derived_product_dispense.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  charge_item.rs  charge_item_definition.rs  citation.rs  claim.rs  claim_response.rs  clinical_impression.rs  clinical_use_definition.rs  code_system.rs  communication.rs  consent.rs  (+129 more)
tests/: choice_type_prototype.rs  primitive_extensions_prototype.rs  roundtrip_official_examples.rs  roundtrip_r3_examples.rs  roundtrip_r4_examples.rs  roundtrip_r5_examples.rs
tests/common/: mod.rs
wix/: main.wxs
(+83 files in other folders)
