[package]
name = "fhir"
version = "0.3.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "Fast Healthcare Interoperability Resources (FHIR) API is a standardized, RESTful interface for exchanging electronic health records."
readme = "README.md"
repository = "https://github.com/joelparkerhenderson/fhir-rust-crate/"
license = "MIT OR Apache-2.0 OR BSD-3-Clause OR GPL-2.0-only OR GPL-3.0-only"
keywords = ["medical", "healthcare", "hospital", "patient", "health"]
categories = ["api-bindings", "data-structures", "science"]
rust-version = "1.88"
include = [
    "/src/**",
    "/examples/**",
    "/README.md",
    "/LICENSE.md",
    "/CHANGELOG.md",
    "/llms.txt",
    "/llms.json",
]

[package.metadata.docs.rs]
all-features = true

[features]
# Preserve exact `decimal` precision (trailing zeros, high precision) by backing
# `serde_json::Number` with arbitrary precision. Off by default because it is a
# global serde_json effect and changes `Number` equality to be string-based.
precise-decimal = ["serde_json/arbitrary_precision"]

[workspace]
members = ["fhir-derive-macros"]

[dependencies]
fhir-derive-macros = { path = "fhir-derive-macros", version = "0.1.0" } # Procedural macros for this crate (e.g. #[derive(Validate)]).
serde = { version = "~1.0.228", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.150" } # Serde serialization/deserialization of JSON data.
serde_with = { version = "3.21" } # Serde annotation helpers for serde "with" and "serde_as"
indoc = { version = "2.0" } # Indented string literal procedural macro.
convert_case = { version = "0.11" } # Convert text case, such as from camel case to snake case.
