[package]
name = "fhir"
version = "1.1.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
homepage = "https://github.com/joelparkerhenderson/fhir-rust-crate"
description = "Fast Healthcare Interoperability Resources (FHIR) data model for Rust: the complete FHIR R5 and R4 resources, datatypes, and code systems as serde-serializable types, plus a spec-driven code generator."
readme = "README.md"
repository = "https://github.com/joelparkerhenderson/fhir-rust-crate/"
license = "MIT OR Apache-2.0 OR BSD-3-Clause OR GPL-2.0-only OR GPL-3.0-only"
keywords = ["medical", "healthcare", "hospital", "patient", "health"]
categories = ["api-bindings", "data-structures", "science"]
rust-version = "1.88"
include = [
    "/src/**",
    "/examples/**",
    "/README.md",
    "/LICENSE.md",
    "/CHANGELOG.md",
    "/llms.txt",
    "/llms.json",
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.wix]
upgrade-guid = "641DA961-135A-4BF8-9D03-13CA038FDAB1"
path-guid = "0ED797FA-7E35-4848-A1E1-1E8FDB5B148E"
license = false
eula = false

[features]
# Which FHIR releases to compile. Each release is a complete, independent model
# (~135k lines of generated Rust), so they are opt-in: enable only what you use.
# `r5` is on by default because it is the release this crate shipped first.
default = ["r5"]
# The FHIR Release 4 (4.0.1) model: `fhir::r4`.
r4 = []
# The FHIR Release 5 (5.0.0) model: `fhir::r5`.
r5 = []
# Preserve exact `decimal` precision (trailing zeros, high precision) by backing
# `serde_json::Number` with arbitrary precision. Off by default because it is a
# global serde_json effect and changes `Number` equality to be string-based.
precise-decimal = ["serde_json/arbitrary_precision"]
# An async FHIR REST client (`fhir::client`). Pulls in reqwest + tokio.
client = ["dep:reqwest", "dep:tokio"]
# FHIR XML serialization (`fhir::r4::xml`, `fhir::r5::xml`). Pulls in quick-xml.
xml = ["dep:quick-xml"]

[workspace]
members = ["fhir-derive-macros"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The examples are written against a specific release's model, so each one
# declares the feature that provides it. Without this, `cargo build
# --all-targets --no-default-features --features r4` would try to compile the
# R5 examples against a crate that has no `r5` module.
[[example]]
name = "build_patient"
required-features = ["r5"]

[[example]]
name = "client_crud"
required-features = ["r5", "client"]

[[example]]
name = "code_systems"
required-features = ["r5"]

[[example]]
name = "extensions"
required-features = ["r5"]

[[example]]
name = "operation_outcome"
required-features = ["r5"]

[[example]]
name = "primitive_extensions"
required-features = ["r5"]

[[example]]
name = "read_bundle"
required-features = ["r5"]

[[example]]
name = "transaction_bundle"
required-features = ["r5"]

[[example]]
name = "validate_resource"
required-features = ["r5"]

[[example]]
name = "tutorial"
required-features = ["r5"]

[[example]]
name = "r4_patient"
required-features = ["r4"]

[[example]]
name = "r4_and_r5_side_by_side"
required-features = ["r4", "r5"]

[dependencies]
fhir-derive-macros = { path = "fhir-derive-macros", version = "1.0.0" } # Procedural macros for this crate (e.g. #[derive(Validate)]).
serde = { version = "~1.0.228", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.150" } # Serde serialization/deserialization of JSON data.
serde_with = { version = "3.21" } # Serde annotation helpers for serde "with" and "serde_as"
indoc = { version = "2.0" } # Indented string literal procedural macro.
convert_case = { version = "0.11" } # Convert text case, such as from camel case to snake case.
vec1 = { version = "1.12", features = ["serde"] } # Non-empty Vec for FHIR 1..* elements.
reqwest = { version = "0.12", features = ["json"], optional = true } # HTTP client for the `client` feature.
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true } # Async runtime for the `client` feature.
quick-xml = { version = "0.36", optional = true } # XML reader/writer for the `xml` feature.

[dev-dependencies]
wiremock = "0.6" # Mock HTTP server for `client` unit tests.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } # Async runtime for tests.

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
