[package]
name = "fhir-derive-macros"
version = "0.2.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "Procedural macros for the `fhir` crate, providing #[derive(Validate)]."
repository = "https://github.com/joelparkerhenderson/fhir-rust-crate/"
license = "MIT OR Apache-2.0 OR BSD-3-Clause OR GPL-2.0-only OR GPL-3.0-only"
keywords = ["fhir", "healthcare", "validate", "derive", "macro"]
categories = ["development-tools", "science"]
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
